k8s/apps/datalake-metrics/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    ignore-check.kube-linter.io/dangling-service: Check is incompatible with prometheus-operator CRDs
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
  labels:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/instance: k8s
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 3.14.0
  name: prometheus-k8s
spec:
  ports:
    - name: web
      port: 9090
      targetPort: web
    - name: reloader-web
      port: 8080
      targetPort: reloader-web
  selector:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/instance: k8s
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: kube-prometheus
  sessionAffinity: ClientIP
